# river

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  config.template.yaml  languages.template.yaml  log4rs.yaml
example/: .gitignore  config.yml  main.py  river_pb2.py  river_pb2_grpc.py
example/a_plus_b/: config.yml
example/c/1001/: main.c
example/cpp/1000/: main.cpp
example/go/1000/: main.go
example/go/1001/: main.go
example/hello_world/: config.yml  main.cpp  main.py
example/node/1001/: main.js
example/rust/1001/: main.rs
example/ts/1001/: main.ts
judger/: .gitignore
judger/data/: .gitignore
judger/data/1000/: .gitignore
plugins/: build.sh
plugins/js/: README.md  package-lock.json  validate.js
proto/: river.proto
runner/: .gitignore  package.json  tsconfig.json
runtime/: .dockerignore  Dockerfile  build.sh
runtime/data/1002/: data1.in  data1.out
runtime/data/1003/: data2.in  data2.out  generate_input.cpp  info.txt  main-TLE.cpp  main.cpp
runtime/node/: tsconfig.json
runtime/plugins/node/: failure.js  package-lock.json  package.json
src/: allow.rs  cgroup.rs  config.rs  default.yml  error.rs  exec_args.rs  file.rs  judger.rs  main.rs  memory.c  process.rs  reader.rs  result.rs  runner.rs  sandbox.rs  seccomp.rs
tests/: config.yml  response.json
