[package]
name = "river"
version = "0.1.0"
authors = ["MeiK <meik2333@gmail.com>"]
edition = "2018"

[dependencies]
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time", "fs"] }
futures = { version = "0.3" }
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
async-stream = "0.2"
tower = "0.3"
tempfile = "3"
libc = "0.2.76"

[build-dependencies]
tonic-build ={ version = "0.3" }
