[package]
name = "river"
version = "0.1.0"
authors = ["MeiK <meik2333@gmail.com>"]
edition = "2018"

[dependencies]
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time", "fs"] }
futures = { version = "0.3" }
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
async-stream = "0.2"
tower = "0.3"
tempfile = "3"
libc = "0.2.76"
log = "0.4.0"
env_logger = "0.8.1"
nix = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
lazy_static = "1.4.0"
zip = "0.5"

[build-dependencies]
tonic-build ={ version = "0.3" }
cc = "1.0"