[package]
name = "river"
version = "0.1.0"
authors = ["MeiK <meik2333@gmail.com>"]
edition = "2018"

[dependencies]
tonic = "0.4"
prost = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version =  "0.1", features = ["net"] }
async-stream = "0.3"
futures = { version = "0.3" }
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
tower = "0.4"
tempfile = "3"
libc = "0.2"
log = "0.4.0"
env_logger = "0.8.1"
log4rs = "1"
nix = "0.20.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
lazy_static = "1.4.0"
num_cpus = "1.0"

[build-dependencies]
tonic-build ={ version = "0.4" }
cc = "1.0"
